--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ main {
     justify-content: center;
     align-items: center;
     background-color: #494368;
+    gap: 20px;
 }
 .right-side{
     display: flex;
@@ -36,6 +37,18 @@ main {
     align-items: center;
 }
 
+.etch-block {
+    background-color: white;
+    border: 1px solid black;
+    width: calc(100%/16);
+    height: calc(100%/16);
+    box-sizing: border-box;
+}
 .hover {
     background-color: black;
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+  }
